# parallel_independent_sets

./: .gitignore  CMakeLists.txt  evaluate.sh
doc/: gal.tex  gal_presentation.tex
evaluation/: evaluate.sh  evaluate_all.sh  generate_latex.py  plot_results.py
evaluation/results/: 0.5  0.6  0.7
graphs/: demel.gml  gen_gml.py  generate_graphs.sh  larger.gml
graphs/small/: simple.gml
src/: common.hpp  graphml.cpp  graphml.hpp  main.cpp  par_ind_sets.cpp  par_ind_sets.hpp  seq_ind_sets.cpp  seq_ind_sets.hpp
